# meval

./: .gitignore  CMakeLists.txt  data.c  data.h  main.c
argumentParsing/: _index.c  _index.h  expression.c  expression.h  help.c  help.h  variable.c  variable.h
array/: _index.c  _index.h  charArray.c  charArray.h  intArray.c  intArray.h  variableArray.c  variableArray.h
calculation/: _index.c  _index.h  calculationChain.c  calculationChain.h  expression.c  expression.h  operant.c  operant.h  operator.c  operator.h  parenthesis.c  parenthesis.h
regex/: _index.c  _index.h  definitions.c  definitions.h  regexContainer.c  regexContainer.h
